--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "talkjs": "^0.14.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
