--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-datetime-picker": "^3.0.5",
     "react-dom": "^17.0.1",
+    "react-draggable": "^4.4.3",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
