--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-=https://lfg-beta.herokuapp.com/
-REACT_APP_API_BASE_URL=http://localhost:4000
+REACT_APP_API_BASE_URL=https://lfg-beta.herokuapp.com/
+DEV_API_URL=http://localhost:4000
